<resources>
    <string name="app_name">Challenge2_BadhrulSalman</string>
    <string name="cari_layanan_makanan_amp_tujuan"><![CDATA[Cari layanan, makanan, & tujuan]]></string>
<!--    <string name="rp109_048">Rp109.048</string>-->
<!--    <string name="klik_amp_cek_riwayat"><![CDATA[Klik & cek riwayat]]></string>-->
    <string name="akses_cepat">Akses cepat</string>
    <string name="ada_voucher_nganggur_nih">Ada voucher nganggur, nih</string>
    <string name="restaran_terdekat">Restaran terdekat</string>
    <string name="gosend">GoSend</string>
    <string name="lainnya">Lainnya</string>
    <string name="gofood">GoFood</string>
    <string name="check_in">Check In</string>
    <string name="gocar">GoCar</string>
    <string name="gomart">GoMart</string>
    <string name="gopulsa">GoPulsa</string>
    <string name="goride">GoRide</string>
    <string name="_39_xp_lagi_ada_harta_karun">39 XP lagi ada Harta Karun</string>
    <string name="harta_karun_bentar_lagi_hilang">Harta Karun bentar lagi hilang</string>
    <string name="festival_idaman_perempuan">Festival Idaman perempuan!</string>
    <string name="temukan_kebutuhan_cantik_mu_hemat_pakai_gopay_dengan_cashback_50_klik">Temukan kebutuhan cantik-mu hemat pakai Gopay dengan cashback 50%. Klik!</string>
    <string name="rp109_048">Rp109.048</string>
    <string name="klik_amp_cek_riwayat"><![CDATA[Klik & cek riwayat]]></string>
    <string name="bayar">Bayar</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="eksplor">Eksplor</string>
    <string name="beranda">Beranda</string>
    <string name="promo">Promo</string>
    <string name="pesanan">Pesanan</string>
    <string name="chat">Chat</string>
</resources>